tests/expectations/compiler/constructor/checksum_constructor_does_not_match_fail.out
Error [ETYC0372156]: A 'noupgrade', 'admin', or 'checksum' constructor must be empty. The Leo compiler will insert the appropriate code.
    --> compiler-test:6:5
     |
   6 |     @checksum(mapping = "test.aleo::expected_checksum", key = "true")
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   7 |     constructor() {
     |     ^^^^^^^^^^^^^^^
   8 |         if self.edition >= 0u16 {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   9 |             let expected: [u8; 32] = Mapping::get(expected_checksum, true);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |             assert_eq(self.checksum, expected);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  11 |         }
     |         ^
  12 |     }
     |     ^
